--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </header>s
 
-        <!-- Navigation -->
+        <!-- Navigation Panel -->
         <nav class="navigation">
         <div class="nav-content">
             <div class="selector-group">
