--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <!-- Configuration Display -->
                 <div class="config-panel">
                     <div class="panel-header">
-                        <h2><i class="fas fa-cog"></i> UI Configuration</h2>
+                        <h2><i class="fas fa-cog"></i> Configuration</h2>
                         <div class="config-actions">
                             <button id="copy-config" class="btn btn-small">
                                 <i class="fas fa-copy"></i> Copy JSON
